--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
-    "start": "expo start",
+    "start": "expo start --port 5173",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web",
+    "android": "expo start --android --port 5173",
+    "ios": "expo start --ios --port 5173",
+    "web": "expo start --web --port 5173",
     "test": "jest --watchAll",
     "lint": "expo lint"
   },
@@ -17,23 +17,31 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/native": "^6.0.2",
+    "axios": "^1.7.3",
     "expo": "~51.0.26",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
+    "expo-image": "~1.12.13",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.21",
+    "expo-secure-store": "~13.0.2",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
+    "moment": "^2.30.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-paper": "^5.12.5",
     "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.5",
+    "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10"
+    "react-native-vector-icons": "^10.1.0",
+    "react-native-web": "~0.19.10",
+    "shopipi-mobile": "file:"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -42,6 +50,7 @@
     "@types/react-test-renderer": "^18.0.7",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.3",
+    "metro-react-native-babel-preset": "^0.77.0",
     "react-test-renderer": "18.2.0",
     "typescript": "~5.3.3"
   },
